(bootstrap-components) fixed all sorts of stuff with variables and colors and font sizes and spacing

--- a/less/fuelux/tree.less
+++ b/less/fuelux/tree.less
@@ -44,7 +44,7 @@
 		color: #385b6b;
 	}
 
-	.tree-selected > .tree-branch-header, 
+	.tree-selected > .tree-branch-header,
 	.tree-item.tree-selected {
 		background: @blue-light;
 	}
@@ -66,10 +66,10 @@
 		background: transparent;
 	}
 
-	.tree-item-name:hover, 
+	.tree-item-name:hover,
 	.tree-item-name:hover .tree-label {
 		background: transparent;
-		color: @brand-primary;
+		color: @brand-primary-medium;
 	}
 
 	.icon-folder:before {
@@ -102,7 +102,7 @@
 	}
 
 	.tree-branch-header:hover .tree-label {
-		color: @brand-primary;
+		color: @brand-primary-medium;
 	}
 
 
