--- a/less/list-group.less
+++ b/less/list-group.less
@@ -2,8 +2,8 @@
 	&.active,
 	&.active:hover,
 	&.active:focus {
-		background-color: @brand-primary;
-		border-color: @brand-primary;
+		background-color: @brand-primary-medium;
+		border-color: @brand-primary-medium;
 	}
 	&.disabled,
 	&.disabled:hover,
