--- a/less/navbar.less
+++ b/less/navbar.less
@@ -11,10 +11,10 @@
 
 	.navbar-nav {
 		> li > a {
-			color:@brand-primary;
+			color:@brand-primary-medium;
 			&:hover,
 			&:focus {
-				color: @brand-primary;
+				color: @brand-primary-medium;
 				background-color: #ddeef4;
 			}
 		}
@@ -23,7 +23,7 @@
 			&,
 			&:hover,
 			&:focus {
-				background-color: #b4dff0;
+				background-color: @brand-primary-medium-light;
 			}
 		}
 		.open > a {
@@ -31,7 +31,7 @@
 			&:hover,
 			&:focus {
 				background-color: #ddeef4;
-				color: @brand-primary;
+				color: @brand-primary-medium;
 			}
 		}
 	}
