--- a/less/navs.less
+++ b/less/navs.less
@@ -14,7 +14,7 @@
 	//.box-shadow(inset 0 -1px 1px rgba(0,0,0,0.05));
 	> li {
 		> a {
-			color: @brand-primary;
+			color: @brand-primary-medium;
 			line-height: 1;
 			border: 1px solid #ddd;
 			background-color: #f6f6f6;
@@ -110,7 +110,7 @@
 		> a {
 			&:focus,
 			&:hover {
-				color: @brand-primary;
+				color: @brand-primary-medium;
 				background-color: #ddeef4;
 			}
 		}
@@ -125,7 +125,7 @@
 			&:hover,
 			&:focus {
 				color: #555;
-				background-color: #b4dff0;
+				background-color: @brand-primary-medium-light;
 			}
 		}
 	}
